# connex

./: Cargo.toml  README.md  rustfmt.toml
connex/: Cargo.toml
connex-cli/: Cargo.toml
connex-cli/src/: app.rs  main.rs
connex-levels/: Cargo.toml  build.rs
connex-levels/levels/: 000.txrt  001.txt  002.txt  003.txt  004.txt
connex-levels/src/: lib.rs
connex-tui/: Cargo.toml
connex-tui/src/: app.rs  canvas.rs  editor.rs  game.rs  main.rs  world.rs
connex-tui/src/app/: editor.rs  game.rs  game_help.txt  mod.rs
connex-tui/src/widget/: canvas.rs  game.rs  mod.rs  painter.rs  text.rs
connex/src/: block.rs  game.rs  lib.rs  world.rs
