[package]
name = "connex-levels"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "connex game levels"
documentation = "https://docs.rs/connex-levels"
homepage = "https://github.com/7sDream/connex"
repository = "https://github.com/7sDream/connex"
license = "BSD-3-Clause-Clear"
keywords = ["connex", "game"]
categories = ["game-development", "no-std"]
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.connex]
version = "0.1.0"
path = "../connex"
