[package]
name = "connex-tui"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "connex game in terminal"
homepage = "https://github.com/7sDream/connex"
repository = "https://github.com/7sDream/connex"
license = "BSD-3-Clause-Clear"
keywords = ["connex", "game"]
categories = ["games"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rand]
version = "0.8.5"

[dependencies.tui]
version = "0.18"
default-features = false
features = ["crossterm"]

[dependencies.crossterm]
version = "0.23"

[dependencies.connex]
version = "0.1.0"
path = "../connex"
features = ["random"]

[dependencies.connex-levels]
version = "0.1.0"
path = "../connex-levels"
