[package]
name = "connex-tui"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "connex game in terminal"
homepage = "https://github.com/7sDream/connex"
repository = "https://github.com/7sDream/connex"
license = "BSD-3-Clause-Clear"
keywords = ["connex", "game"]
categories = ["games"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connex = { version = "0.1.0", path = "../connex", features = ["random"] }
connex-levels = { version = "0.1.0", path = "../connex-levels" }
tui-markup = { version = "0.2.1", features = ["tui"] }
once_cell = "1.13.0"
rand = "0.8.5"
tui = "0.19"
crossterm = "0.25"
