[package]
name = "connex"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "connex base library"
documentation = "https://docs.rs/connex"
homepage = "https://github.com/7sDream/connex"
repository = "https://github.com/7sDream/connex"
license = "BSD-3-Clause-Clear"
keywords = ["connex", "gameplay", "game"]
categories = ["game-development", "no-std"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
random = ["rand"]

[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }
